--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7"
   }
 }
